# smle

./: .gitignore  .gitmodules  README.md  build.sh  pyproject.toml
src/smle/: __init__.py  cli.py
