[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smle"
version = "0.1.5"
description = "Simple Machine Learning Essentials - a tiny utilities framework for ML/DL."
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
smle = "smle.cli:main"